Fix navigation z-index

--- a/src/sass/4-base/_09-navigation.scss
+++ b/src/sass/4-base/_09-navigation.scss
@@ -64,6 +64,7 @@
   position: absolute;
   top: calc(100% + 2px);
   left: -1px;
+  z-index: $z-index-menu;
   display: none;
   min-width: 20rem;
   border: $base-border-thin;
