--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -41,3 +41,8 @@ $base-box-shadow-hover: 0 4px 6px 0 rgba(0,0,0,0.03), 0 5px 15px 0 rgba(37,41,82
 
 $input-border-radius: .4rem;
 $input-border: 1px solid #d8d8d8;
+
+// Z-index
+// --------------------------------------------------------------
+
+$z-index-menu: 100;
